--- a/components/sidebar.css
+++ b/components/sidebar.css
@@ -18,10 +18,7 @@
   font-weight: bold;
   margin-top: 16px;
   margin-bottom: 16px;
-}
-
-.h1:before {
-  content: '# '
+  text-align: center;
 }
 
 h1 a {
@@ -35,8 +32,8 @@ h1 a:hover {
 
 @media (min-width: 600px) {
   :host {
-    width: 21%;
-    padding: 0px 20px 20px 35px;
+    width: 25%;
+    padding: 0px 0px 10px 0px;
     display: inline-block;
     padding-bottom: 3%;
     overflow-y: scroll;
